apps/twenty/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: twentycrm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: twentycrm
          image: twentycrm/twenty-postgres:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: tcp
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /home/postgres/pgdata
              name: db-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
