apps/twenty/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  namespace: twentycrm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: twentycrm
          image: twentycrm/twenty:latest
          imagePullPolicy: Always
          command:
            - yarn
            - worker:prod
          resources:
            requests:
              memory: "1024Mi"
              cpu: "250m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          stdin: true
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
