apps/twenty/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: twentycrm
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: db
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
