apps/twenty/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: twentycrm
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
